mType/tests/testFiles/import/pass/inherit3/Sub.mt
import { Super } from "./Super.mt";

public class Sub extends Super {
    public function tag(): string {
        return "B";
    }
}
